# admin_panel

./: .gitignore  Makefile  pyproject.toml  readme.md
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py  0002_customuser_from_far_east_customuser_name_and_more.py  0002_devmanuser_level_delete_studentlevel.py  0002_levels_studentlevel.py  0003_alter_customuser_email_alter_customuser_name_and_more.py  0003_alter_customuser_options_alter_levels_options.py  0004_rename_levels_level.py  0005_alter_studentlevel_options_useravoidance.py  0006_userpreference.py  0007_useravoidance_user_userpreference_user_and_more.py
config/: settings.py  urls.py
projects/: admin.py  forms.py  models.py  urls.py  views.py
projects/app_api/: discord.py  trello.py
projects/migrations/: 0001_initial.py  0002_rename_user_meetingstimeslotuser_student_and_more.py  0002_timeslot_team.py  0002_trainingstream.py  0003_alter_projectmanager_options_alter_team_options_and_more.py  0003_project.py  0004_alter_team_time_slot.py  0004_projectstudent.py  0005_alter_projectstudent_options_meetingstimeslot.py  0005_remove_team_member_team_members.py  0006_alter_team_members_alter_team_project_manager_and_more.py  0006_meetingstimeslotuser.py  0007_alter_membership_options_remove_membership_user_and_more.py  0007_rename_student_meetingstimeslotuser_user_and_more.py
templates/: _base.html  index.html  invite.html  project_invitation_email.txt  setup.html  slots.html
templates/registration/: login.html
